--- a/src/Core/AndroidNative/maui/build.gradle
+++ b/src/Core/AndroidNative/maui/build.gradle
@@ -28,6 +28,7 @@ android {
 dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'com.github.bumptech.glide:annotations:4.15.1'
+    implementation 'com.github.bumptech.glide:avif-integration:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
