--- a/eng/pipelines/common/provision.yml
+++ b/eng/pipelines/common/provision.yml
@@ -19,122 +19,7 @@ parameters:
   base64Encode: false
 
 steps:
-  # Prepare macOS
-  - ${{ if ne(parameters.poolName, 'Azure Pipelines') }}:
-    - template: agent-cleanser/v1.yml@yaml-templates
-      parameters:
-        condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))
-        UninstallMono: false
-        UninstallXamarinMac: false
-        CleanseAgentToolsDotNet: true           # Cleanse all .NET versions under the agent tools directory and use only those provisioned by the pipeline
-        SelfHealPowerShell: false
-        AUTH_TOKEN_GITHUB_COM: $(github--pat--vs-mobiletools-engineering-service2)
-  # Provision Xcode
-  - ${{ if ne(parameters.skipXcode, 'true') }}:
-    - task: xamops.azdevex.provisionator-task.provisionator@2
-      condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))
-      displayName: 'Provision Xcode'
-      inputs:
-        provisioning_script: ${{ parameters.checkoutDirectory }}/${{ parameters.provisionatorXCodePath }}
-        provisioning_extra_args: ${{ parameters.provisionatorExtraArguments }}
-        github_token: ${{ parameters.gitHubToken }}
-      env:
-        PROVISIONATOR_CHANNEL: ${{ parameters.provisionatorChannel }}
-        AUTH_TOKEN_COMPONENTS_MAC_IOS_CERTIFICATE_P12: ${{ parameters.certPass }}
 
-  # Provision Additional Software
-  - ${{ if ne(parameters.skipProvisioning, 'true') }}:
-    - task: xamops.azdevex.provisionator-task.provisionator@2
-      displayName: 'Provision Additional Software'
-      condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))
-      continueOnError: true
-      inputs:
-        provisioning_script: ${{ parameters.checkoutDirectory }}/${{ parameters.provisionatorPath }}
-        provisioning_extra_args: ${{ parameters.provisionatorExtraArguments }}
-        github_token: ${{ parameters.gitHubToken }}
-      env:
-        PROVISIONATOR_CHANNEL: ${{ parameters.provisionatorChannel }}
-        AUTH_TOKEN_COMPONENTS_MAC_IOS_CERTIFICATE_P12: ${{ parameters.certPass }}
-        ${{ if eq(parameters.skipAndroidSdks, true) }}:
-          SKIP_ANDROID_API_SDKS: 'true'
-        ${{ if eq(parameters.skipAndroidImages, true) }}:
-          SKIP_ANDROID_API_IMAGES: 'true'
-        ${{ if eq(parameters.installDefaultAndroidApi, true) }}:
-          INSTALL_DEFAULT_ANDROID_API: 'true'
-
-  # Setup JDK Paths (gradle needs it)
-  - bash: |
-      echo "##vso[task.setvariable variable=JI_JAVA_HOME]$(JAVA_HOME_17_X64)"
-      echo "##vso[task.setvariable variable=JAVA_HOME]$(JAVA_HOME_17_X64)"
-      brew install --cask microsoft-openjdk@17
-    displayName: 'Setup JDK Paths'
-    condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))  
-  # Configure VS Mac for Xcode
-  # This seems to be needed or else it will pick other xcode for example on xharness
-  # - bash: |
-  #     set -x
-  #     mkdir -p ~/Library/Preferences/Xamarin
-  #     rm -f ~/Library/Preferences/Xamarin/Settings.plist
-  #     /usr/libexec/PlistBuddy -c "add :AppleSdkRoot string $(dirname $(dirname $(xcode-select -p)))" ~/Library/Preferences/Xamarin/Settings.plist || true
-  #     cat ~/Library/Preferences/Xamarin/Settings.plist || true
-  #   displayName: 'Configure Visual Studio'
-  #   condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))
-
-  # Prepare Windows
-  # Provision Additional Software
-  - ${{ if ne(parameters.skipProvisioning, 'true') }}:
-    - task: xamops.azdevex.provisionator-task.provisionator@2
-      displayName: 'Provision Additional Software'
-      condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
-      inputs:
-        provisioning_script: ${{ parameters.checkoutDirectory }}/${{ parameters.provisionatorPath }}
-        provisioning_extra_args: ${{ parameters.provisionatorExtraArguments }}
-        github_token: ${{ parameters.gitHubToken }}
-      env:
-        PROVISIONATOR_CHANNEL: ${{ parameters.provisionatorChannel }}
-        ${{ if eq(parameters.skipAndroidSdks, true) }}:
-          SKIP_ANDROID_API_SDKS: 'true'
-        ${{ if eq(parameters.skipAndroidImages, true) }}:
-          SKIP_ANDROID_API_IMAGES: 'true'
-        ${{ if eq(parameters.installDefaultAndroidApi, true) }}:
-          INSTALL_DEFAULT_ANDROID_API: 'true'
-
-  - pwsh: |
-      if ($env:JAVA_HOME_17_X64) {
-        $env:JAVA_HOME = $env:JAVA_HOME_17_X64
-      } else {
-        $path = (Get-ChildItem $env:ProgramFiles\Microsoft\jdk-17.*\bin\java.exe) | Select-Object -First 1
-        if ($path -and (Test-Path $path)) {
-          $env:JAVA_HOME = $path.Directory.Parent.FullName
-        }
-      }
-      if ($env:JAVA_HOME) {
-        echo "##vso[task.setvariable variable=JAVA_HOME]$env:JAVA_HOME"
-        echo "JAVA_HOME set to '$env:JAVA_HOME'"
-      } else {
-        echo "Unable to set JAVA_HOME"
-      }
-    displayName: 'Setup JDK Paths'
-    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
-
-  - pwsh: |
-      if ($env:ANDROID_SDK_ROOT) {
-        echo "ANDROID_SDK_ROOT already set to '$env:ANDROID_SDK_ROOT'"
-      } else {
-        if ((Test-Path "${env:ProgramFiles(x86)}\Android\android-sdk")) {
-          $env:ANDROID_SDK_ROOT = "${env:ProgramFiles(x86)}\Android\android-sdk"
-        }
-        if ($env:ANDROID_SDK_ROOT) {
-          echo "##vso[task.setvariable variable=ANDROID_SDK_ROOT]$env:ANDROID_SDK_ROOT"
-          echo "ANDROID_SDK_ROOT set to '$env:ANDROID_SDK_ROOT'"
-        } else {
-          echo "Unable to set ANDROID_SDK_ROOT"
-        }
-      }
-    displayName: 'Setup ANDROID_SDK_ROOT Paths'
-    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
-
-  # Prepare Both
   - task: UseDotNet@2                 # https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/tool/dotnet-core-tool-installer?view=azure-devops
     displayName: 'Use .NET SDK $(DOTNET_VERSION)'
     inputs:
@@ -150,6 +35,81 @@ steps:
   - ${{ if eq(parameters.clearCaches, 'true') }}:
     - pwsh: dotnet nuget locals all --clear
       displayName: 'Clear all NuGet caches'
+
+  # Prepare macOS
+  - ${{ if ne(parameters.poolName, 'Azure Pipelines') }}:
+    - template: agent-cleanser/v1.yml@yaml-templates
+      parameters:
+        condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))
+        UninstallMono: false
+        UninstallXamarinMac: false
+        CleanseAgentToolsDotNet: true           # Cleanse all .NET versions under the agent tools directory and use only those provisioned by the pipeline
+        SelfHealPowerShell: false
+        AUTH_TOKEN_GITHUB_COM: $(github--pat--vs-mobiletools-engineering-service2)
+
+  # Provision Xcode
+  - ${{ if ne(parameters.skipXcode, 'true') }}:
+    - task: xamops.azdevex.provisionator-task.provisionator@2
+      condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))
+      displayName: 'Provision Xcode'
+      inputs:
+        provisioning_script: ${{ parameters.checkoutDirectory }}/${{ parameters.provisionatorXCodePath }}
+        provisioning_extra_args: ${{ parameters.provisionatorExtraArguments }}
+        github_token: ${{ parameters.gitHubToken }}
+      env:
+        PROVISIONATOR_CHANNEL: ${{ parameters.provisionatorChannel }}
+        AUTH_TOKEN_COMPONENTS_MAC_IOS_CERTIFICATE_P12: ${{ parameters.certPass }}
+
+  # Provision Additional Software (Jdk, Android SDKs, etc.)
+  - ${{ if ne(parameters.skipProvisioning, 'true') }}:
+    - displayName: 'Provision Additional Software'
+      condition: succeeded()
+      env:
+        GITHUB_TOKEN: ${{ parameters.gitHubToken }}
+        ${{ if eq(parameters.skipAndroidSdks, true) }}:
+          SKIP_ANDROID_API_SDKS: 'true'
+        ${{ if eq(parameters.skipAndroidImages, true) }}:
+          SKIP_ANDROID_API_IMAGES: 'true'
+        ${{ if eq(parameters.installDefaultAndroidApi, true) }}:
+          INSTALL_DEFAULT_ANDROID_API: 'true'
+      pwsh: |
+        dotnet build -t:ProvisionJdk -bl:"$(LogDirectory)/provision-jdk.binlog"
+        dotnet build -t:ProvisionAndroidSdk -bl:"$(LogDirectory)/provision-androidsdk.binlog"
+
+  # Setup JAVA_HOME Environment variable
+  - displayName: 'Setup JDK Paths'
+    condition: succeeded()
+    pwsh: |
+      # Execute the command and capture the JSON output
+      $jsonOutput = & android jdk list --format=Json | ConvertFrom-Json
+      # Find the first item with DotNetPreferred set to True
+      $preferredJdk = $jsonOutput | Where-Object { $_.DotNetPreferred -eq $true } | Select-Object -First 1
+      # Get the value of the Home property
+      $env:JAVA_HOME = $preferredJdk.Home
+      if ($env:JAVA_HOME) {
+        echo "##vso[task.setvariable variable=JAVA_HOME]$env:JAVA_HOME"
+        echo "JAVA_HOME set to '$env:JAVA_HOME'"
+      } else {
+        echo "Unable to set JAVA_HOME"
+      }
+
+  - displayName: 'Setup ANDROID_SDK_ROOT Paths'
+    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
+    pwsh: |
+      if ($env:ANDROID_SDK_ROOT) {
+        echo "ANDROID_SDK_ROOT already set to '$env:ANDROID_SDK_ROOT'"
+      } else {
+        if ((Test-Path "${env:ProgramFiles(x86)}\Android\android-sdk")) {
+          $env:ANDROID_SDK_ROOT = "${env:ProgramFiles(x86)}\Android\android-sdk"
+        }
+        if ($env:ANDROID_SDK_ROOT) {
+          echo "##vso[task.setvariable variable=ANDROID_SDK_ROOT]$env:ANDROID_SDK_ROOT"
+          echo "ANDROID_SDK_ROOT set to '$env:ANDROID_SDK_ROOT'"
+        } else {
+          echo "Unable to set ANDROID_SDK_ROOT"
+        }
+      }
+
 
   - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
     - template: ../../common/templates-official/steps/enable-internal-sources.yml
