--- a/eng/pipelines/common/provision.yml
+++ b/eng/pipelines/common/provision.yml
@@ -32,6 +32,10 @@ steps:
       dotnet --list-sdks
     displayName: 'Show .NET SDK info'
 
+  - pwsh: |
+      dotnet tool restore
+    displayName: 'Restore .NET Tools'
+
   - ${{ if eq(parameters.clearCaches, 'true') }}:
     - pwsh: dotnet nuget locals all --clear
       displayName: 'Clear all NuGet caches'
