--- a/src/Provisioning/Provisioning.csproj
+++ b/src/Provisioning/Provisioning.csproj
@@ -186,12 +186,25 @@
 	</Target>
 
 	<Target Name="ProvisionJdkMacOS" DependsOnTargets="DetectJdkVersion" Condition=" '$(IsMacOS)' == 'True' AND '$(_AndroidJdkRequiresProvisioning)' == 'True' ">
-		<Exec Command="brew install --cask microsoft-openjdk@$(_AndroidJdkMajorVersion)" />
+		<Exec Command="brew install --cask microsoft-openjdk@$(_AndroidJdkVersion)" />
 	</Target>
 
 	<Target Name="ProvisionJdkWindows" DependsOnTargets="DetectJdkVersion" Condition=" '$(IsWindows)' == 'True' AND '$(_AndroidJdkRequiresProvisioning)' == 'True' ">
-		<Exec Command="Add-AppxPackage -RegisterByFamilyName -MainPackage Microsoft.DesktopAppInstaller_8wekyb3d8bbwe" />
-		<Exec Command="winget install Microsoft.OpenJDK.$(JavaJdkVersion)" />
+		<PropertyGroup>
+			<_JdkHostArchitecture Condition=" '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' == 'X64' ">x64</_JdkHostArchitecture>
+			<_JdkHostArchitecture Condition=" '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' != 'X64' ">aarch64</_JdkHostArchitecture>
+			<_JdkUrl>https://aka.ms/download-jdk/microsoft-jdk-$(_AndroidJdkVersion)-windows-$(_JdkHostArchitecture).msi</_JdkUrl>
+			<_JdkDownloadTempDirectory>$([System.IO.Path]::Combine($([System.IO.Path]::GetTempPath()), "microsoft-openjdk"))</_JdkDownloadTempDirectory>
+		</PropertyGroup>
+
+		<DownloadFile SourceUrl="$(_JdkUrl)" DestinationFolder="$(_JdkDownloadTempDirectory)">
+			<Output TaskParameter="DownloadedFile" ItemName="_JdkDownloadedFile" />
+		</DownloadFile>
+
+		<Exec Command="msiexec /i $(_JdkDownloadedFile) ADDLOCAL=FeatureMain,FeatureEnvironment,FeatureJarFileRunWith,FeatureJavaHome INSTALLDIR=&quot;$(ProgramFiles)\Microsoft\&quot; /quiet" />
+
+		<!-- <Exec Command="Add-AppxPackage -RegisterByFamilyName -MainPackage Microsoft.DesktopAppInstaller_8wekyb3d8bbwe" />
+		<Exec Command="winget install Microsoft.OpenJDK.$(JavaJdkVersion)" /> -->
 	</Target>
 
 
