--- a/.github/workflows/inclusive-heat-sensor.yml
+++ b/.github/workflows/inclusive-heat-sensor.yml
@@ -5,7 +5,7 @@ on:
   issue_comment:
     types: [created, edited]
   pull_request:
-    types: [opened, reopened]
+    types: [reopened]
   pull_request_review_comment:
     types: [created, edited]
 
