--- a/NuGet.config
+++ b/NuGet.config
@@ -5,6 +5,9 @@
   <packageSources>
     <clear />
     <!--Begin: Package sources managed by Dependency Flow automation. Do not edit the sources below.-->
+    <!--  Begin: Package sources from dotnet-android -->
+    <add key="darc-pub-dotnet-android-b90c559" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-android-b90c5590/nuget/v3/index.json" />
+    <!--  End: Package sources from dotnet-android -->
     <!--  Begin: Package sources from dotnet-aspnetcore -->
     <add key="darc-int-dotnet-aspnetcore-8543570" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-aspnetcore-85435709/nuget/v3/index.json" />
     <!--  End: Package sources from dotnet-aspnetcore -->
@@ -12,7 +15,12 @@
     <!--  End: Package sources from dotnet-emsdk -->
     <!--  Begin: Package sources from dotnet-runtime -->
     <add key="darc-int-dotnet-runtime-9c52987" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-runtime-9c529879/nuget/v3/index.json" />
+    <add key="darc-int-dotnet-runtime-9c52987-1" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-runtime-9c529879-1/nuget/v3/index.json" />
     <!--  End: Package sources from dotnet-runtime -->
+    <!--  Begin: Package sources from xamarin-xamarin-macios -->
+    <add key="darc-pub-xamarin-xamarin-macios-a351bc9" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-xamarin-xamarin-macios-a351bc9f/nuget/v3/index.json" />
+    <add key="darc-pub-xamarin-xamarin-macios-a351bc9-1" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-xamarin-xamarin-macios-a351bc9f-1/nuget/v3/index.json" />
+    <!--  End: Package sources from xamarin-xamarin-macios -->
     <!--End: Package sources managed by Dependency Flow automation. Do not edit the sources above.-->
     <add key="local" value="LOCAL_PLACEHOLDER" />
     <add key="nuget-only" value="NUGET_ONLY_PLACEHOLDER" />
@@ -46,6 +54,7 @@
     <add key="darc-int-dotnet-aspnetcore-8543570" value="true" />
     <!--  End: Package sources from dotnet-aspnetcore -->
     <!--  Begin: Package sources from dotnet-runtime -->
+    <add key="darc-int-dotnet-runtime-9c52987-1" value="true" />
     <add key="darc-int-dotnet-runtime-9c52987" value="true" />
     <!--  End: Package sources from dotnet-runtime -->
     <!--End: Package sources managed by Dependency Flow automation. Do not edit the sources above.-->
