--- a/NuGet.config
+++ b/NuGet.config
@@ -12,6 +12,9 @@
     <add key="darc-int-dotnet-aspnetcore-8543570" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-aspnetcore-85435709/nuget/v3/index.json" />
     <!--  End: Package sources from dotnet-aspnetcore -->
     <!--  Begin: Package sources from dotnet-emsdk -->
+    <add key="darc-pub-dotnet-emsdk-5054dd3" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-5054dd35/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-5054dd3-2" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-5054dd35-2/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-5054dd3-1" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-5054dd35-1/nuget/v3/index.json" />
     <!--  End: Package sources from dotnet-emsdk -->
     <!--  Begin: Package sources from dotnet-runtime -->
     <add key="darc-int-dotnet-runtime-9c52987" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-runtime-9c529879/nuget/v3/index.json" />
