--- a/eng/pipelines/common/device-tests-steps.yml
+++ b/eng/pipelines/common/device-tests-steps.yml
@@ -90,8 +90,8 @@ steps:
       continueOnError: true
       timeoutInMinutes: 5
 
-  - pwsh: ps auxww
-    displayName: 'Dump running processes'
+  - bash: ps auxww
+    displayName: 'Dump running processes before'
 
   # Everything should be release but doing android for now to work around an xharness issue
   - ${{ if eq(parameters.platform, 'android')}}:
@@ -128,6 +128,9 @@ steps:
       condition: and(succeeded(), eq(variables['Platform.Name'], 'Mac'))
       retryCountOnTaskFailure: 1
   # Everything should be release but doing android for now to work around an xharness issue
+
+  - bash: ps auxww
+    displayName: 'Dump running processes after'
 
   - ${{ if eq(parameters.platform, 'ios')}}:
     - bash: |
