More arm and windows 1esp

--- a/eng/pipelines/device-tests.yml
+++ b/eng/pipelines/device-tests.yml
@@ -90,8 +90,8 @@ parameters:
   - name: windowsPool
     type: object
     default:
-      name: $(windowsTestsVmPool)
-      vmImage: $(windowsTestsVmImage)
+      name: $(windowsVmPool)
+      vmImage: $(windowsVmImage)
 
   - name: targetFrameworkVersions
     type: object
