Add AppiumTests shared code

--- a/src/Controls/tests/TestCases.Android.Tests/Controls.TestCases.Android.Tests.csproj
+++ b/src/Controls/tests/TestCases.Android.Tests/Controls.TestCases.Android.Tests.csproj
@@ -9,8 +9,8 @@
     <DefineConstants>$(DefineConstants);ANDROID</DefineConstants>
   </PropertyGroup>
 
-  <Import Project="..\AppiumTests.targets" />
-  
+  <Import Project="..\..\AppiumTests.targets" />
+ 
   <ItemGroup>
     <Content Include="snapshots\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
