--- a/src/Core/src/Core.csproj
+++ b/src/Core/src/Core.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup Condition="$(TargetFramework.Contains('-android'))">
     <PackageReference Include="Xamarin.Android.Glide" Version="$(_XamarinAndroidGlideVersion)" />
+    <PackageReference Include="Xamarin.Android.Glide.AVIF.Integration" Version="$(_XamarinAndroidGlideAVIFIntegrationVersion)" />
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.8.5.1" />
     <PackageReference Include="Xamarin.Google.Android.Material" Version="1.11.0.3" />
     <PackageReference Include="Xamarin.AndroidX.SwipeRefreshLayout" Version="1.1.0.24" />
