- fix package source

--- a/NuGet.config
+++ b/NuGet.config
@@ -47,6 +47,12 @@
       <package pattern="Microsoft.AspNetCore.Components.WebView.*" />
       <package pattern="Microsoft.DotNet.ILCompiler" />
     </packageSource>
+    <packageSource key="darc-pub-xamarin-xamarin-macios-8354d6d9">
+      <package pattern="Microsoft.NET.Sdk.MacCatalyst.*" />
+      <package pattern="Microsoft.NET.Sdk.iOS.*" />
+      <package pattern="Microsoft.NET.Sdk.tvOS.*" />
+      <package pattern="Microsoft.NET.Sdk.macOS.*" />
+    </packageSource>
     <!-- <packageSource key="benchmark-dotnet-prerelease">
     </packageSource> -->
     <packageSource key="skiasharp">
