Try using the new AndroidGradleProject item
Remove the maui.aar that we manually build and check in, and build it instead with the AndroidGradleProject item.

--- a/src/Core/src/Core.csproj
+++ b/src/Core/src/Core.csproj
@@ -28,6 +28,10 @@
   <Import Project="$(MauiSrcDirectory)MultiTargeting.targets" />
 
   <ItemGroup>
+    <AndroidGradleProject Include="../AndroidNative/build.gradle" ModuleName="maui" Visible="true" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MemoryAnalyzers" />
     <PackageReference Include="Microsoft.Extensions.Configuration" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
