--- a/eng/pipelines/common/ui-tests-steps.yml
+++ b/eng/pipelines/common/ui-tests-steps.yml
@@ -38,7 +38,11 @@ steps:
   - template: provision.yml
     parameters:
       skipProvisioning:  true
-      skipAndroidSdks: ${{ ne(parameters.platform, 'android') }}
+      skipJdk: ${{ ne(parameters.platform, 'android') }}
+      skipAndroidCommonSdks: ${{ ne(parameters.platform, 'android') }}
+      skipAndroidPlatformApis: ${{ ne(parameters.platform, 'android') }}
+      skipAndroidEmulatorImages: ${{ ne(parameters.platform, 'android') }}
+      skipAndroidCreateAvds: ${{ ne(parameters.platform, 'android') }}
       skipXcode: ${{ or(eq(parameters.platform, 'android'), eq(parameters.platform, 'windows')) }}
       provisionatorChannel: ${{ parameters.provisionatorChannel }}
       
