--- a/eng/pipelines/handlers.yml
+++ b/eng/pipelines/handlers.yml
@@ -167,9 +167,11 @@ stages:
                 parameters:
                   poolName: ${{ BuildPlatform.poolName }}
                   # gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
-                  skipAndroidSdks: true
-                  skipAndroidImages: true
-                  installDefaultAndroidApi: false
+                  skipJdk: false
+                  skipAndroidCommonSdks: false
+                  skipAndroidPlatformApis: false
+                  skipAndroidEmulatorImages: true
+                  skipAndroidCreateAvds: true
                   skipProvisioning: true
                   skipXcode: ${{ ne(BuildPlatform.name , 'macOS') }}
               - pwsh: ./build.ps1 --target=dotnet --configuration="${{ BuildConfiguration }}" --verbosity=diagnostic
@@ -239,9 +241,11 @@ stages:
                       checkoutDirectory: '$(System.DefaultWorkingDirectory)'
                       provisionatorChannel: ${{ parameters.provisionatorChannel }}
                       # gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
-                      skipAndroidSdks: true
-                      skipAndroidImages: true
-                      installDefaultAndroidApi: true
+                      skipJdk: false
+                      skipAndroidCommonSdks: false
+                      skipAndroidPlatformApis: false
+                      skipAndroidEmulatorImages: true
+                      skipAndroidCreateAvds: true
                       skipProvisioning: true
                       skipXcode: ${{ ne(PackPlatform.name , 'macOS') }}
 
@@ -264,9 +268,11 @@ stages:
             - template: common/provision.yml
               parameters:
                 poolName: ${{ BuildPlatform.poolName }}
-                skipAndroidSdks: true
-                skipAndroidImages: true
-                installDefaultAndroidApi: true
+                skipJdk: false
+                skipAndroidCommonSdks: false
+                skipAndroidPlatformApis: false
+                skipAndroidEmulatorImages: true
+                skipAndroidCreateAvds: true
                 skipProvisioning: true
                 skipXcode: ${{ ne(BuildPlatform.name , 'macOS') }}
 
