--- a/eng/pipelines/maui-release.yml
+++ b/eng/pipelines/maui-release.yml
@@ -170,9 +170,11 @@ extends:
                         checkoutDirectory: '$(System.DefaultWorkingDirectory)'
                         provisionatorChannel: ${{ parameters.provisionatorChannel }}
                         # gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
-                        skipAndroidImages: true
-                        skipAndroidSdks: true
-                        installDefaultAndroidApi: true
+                        skipJdk: false
+                        skipAndroidCommonSdks: false
+                        skipAndroidPlatformApis: false
+                        skipAndroidEmulatorImages: true
+                        skipAndroidCreateAvds: true
                         skipProvisioning: true
                         skipXcode: true
 
