--- a/src/Provisioning/Provisioning.csproj
+++ b/src/Provisioning/Provisioning.csproj
@@ -41,29 +41,52 @@
 		<AndroidSdkPackages Include="emulator" />
 	</ItemGroup>
 
-	<Target Name="ProvisionAndroidSdkPackages">
-		<Message Text="Provisioning Android SDK Packages" />
+	<Target Name="ProvisionAndroidSdkCommonPackages">
+		<Message Text="Provisioning Android SDK Common Packages" />
 
-		<!-- Assemble the platform sdk and emulator image package names to install in the sdk -->
+		<!-- Assemble the common sdk package names to install in the sdk -->
+		<ItemGroup>
+			<!-- Common Packages -->
+			<AndroidSdkCommonPackages Include="@(AndroidSdkPackages)" />
+		</ItemGroup>
+
+		<!-- Install SDK Common Packages -->
+		<Exec Command="dotnet android sdk install --package &quot;%(AndroidSdkCommonPackages.Identity)&quot;" />
+	</Target>
+
+	<Target Name="ProvisionAndroidSdkPlatformApiPackages">
+		<Message Text="Provisioning Android SDK Platform Packages" />
+
+		<!-- Assemble the platform sdk package names to install in the sdk -->
 		<ItemGroup>
 			<!-- Platform APIs -->
-			<AndroidSdkPackages Include="platforms%3Bandroid-%(AndroidSdkApiLevels.Identity)" />
+			<AndroidSdkPlatformApiPackages Include="platforms%3Bandroid-%(AndroidSdkApiLevels.Identity)" />
+		</ItemGroup>
 
+		<!-- Install SDK Platform API Packages -->
+		<Exec Command="dotnet android sdk install --package &quot;%(AndroidSdkPlatformApiPackages.Identity)&quot;" />
+	</Target>
+
+	<Target Name="ProvisionAndroidSdkEmulatorImagePackages">
+		<Message Text="Provisioning Android SDK Emulator Image Packages" />
+
+		<!-- Assemble the emulator image package names to install in the sdk -->
+		<ItemGroup>
 			<!-- Emulator images -->
-			<AndroidSdkPackages Include="system-images%3Bandroid-%(AndroidSdkApiLevels.Identity)%3B%(AndroidSdkApiLevels.SystemImageType)%3B$(AndroidSdkHostAbi)" />
+			<AndroidSdkEmulatorImagePackages Include="system-images%3Bandroid-%(AndroidSdkApiLevels.Identity)%3B%(AndroidSdkApiLevels.SystemImageType)%3B$(AndroidSdkHostAbi)" />
 		</ItemGroup>
 
 		<!-- Install SDK Packages -->
-		<Exec Command="dotnet android sdk install --package &quot;%(AndroidSdkPackages.Identity)&quot;" />
+		<Exec Command="dotnet android sdk install --package &quot;%(AndroidSdkEmulatorImagePackages.Identity)&quot;" />
 	</Target>
 
-	<Target Name="ProvisionAndroidSdkEmulators" DependsOnTargets="ProvisionAndroidSdkPackages">
+	<Target Name="ProvisionAndroidSdkAvdCreateAvds">
 
 		<!-- Create all the AVD's we need based on the api levels specified -->
 		<Exec Command="dotnet android avd create --name &quot;Emulator_%(AndroidSdkApiLevels.Identity)&quot; --sdk &quot;system-images%3Bandroid-%(AndroidSdkApiLevels.Identity)%3B%(AndroidSdkApiLevels.SystemImageType)%3B$(AndroidSdkHostAbi)&quot; --device &quot;%(AndroidSdkApiLevels.DeviceType)&quot; --force" />
 	</Target>
 
-	<Target Name="ProvisionAndroidSdk" DependsOnTargets="ProvisionAndroidSdkPackages;ProvisionAndroidSdkEmulators">
+	<Target Name="ProvisionAndroidSdk" DependsOnTargets="ProvisionAndroidSdkCommonPackages;ProvisionAndroidSdkPlatformApiPackages;ProvisionAndroidSdkEmulatorImagePackages;ProvisionAndroidSdkAvdCreateAvds">
 		<Error
 			Condition=" '$(MSBuildRuntimeType)' != 'Core' "
 			Text="You should only run this target with 'dotnet build'." />
